--- a/src/assets/pages/home.css
+++ b/src/assets/pages/home.css
@@ -28,7 +28,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero-text h4 {
+.hero-text .homestyle{
     font-size: 32px;
     font-weight: 500;
     color: var(--main-color);
@@ -40,3 +40,11 @@
     font-weight: 400;
     line-height: 32px;
 }
+
+.hero-text .titreRegle{
+    font-size: 32px;
+    font-weight: 500;
+    color: rgb(226, 103, 208) ;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
